- no language set - verbose output
JerryScript-DCO-1.0-Signed-off-by: Csaba Osztrogonác oszi@inf.u-szeged.hu

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-language: c
 os: windows
 
 # Default job task: run tests as defined in the $OPT environment variable.
@@ -11,11 +10,11 @@ matrix:
 
     - name: "Windows/x86 Jerry-tests"
       env:
-        - OPTS="--quiet --jerry-tests"
+        - OPTS="--jerry-tests"
 
     - name: "Windows/x86 Jerry-tests"
       env:
-        - OPTS="--quiet  --jerry-test-suite"
+        - OPTS="--jerry-test-suite"
 
     - name: "Windows/x86 Build Tests"
       env:
