--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: c
 os: windows
 
 # Default job task: run tests as defined in the $OPT environment variable.
@@ -8,24 +9,7 @@ script: tools/run-tests.py $OPTS
 matrix:
   include:
 
-    - name: "Windows/x86 Jerry-tests"
-      env:
-        - OPTS="--jerry-tests"
-
-    - name: "Windows/x86 Jerry-tests"
-      env:
-        - OPTS="--jerry-test-suite"
-
-    - name: "Windows/x86 Build Tests"
-      env:
-        - OPTS="--buildoption-test"
-
-    - name: "Windows/x86 Conformance Tests"
-      env:
-        - OPTS="--test262"
-
-    - name: "Windows/x86 Unit Tests"
-      env:
-        - OPTS="--unittests"
+    - name: "Windows/x86 Build"
+      script: tools/build.py
 
   fast_finish: true
