--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ os: windows
 
 # Default job task: run tests as defined in the $OPT environment variable.
 # Jobs can redefine the 'script' stage in the matrix below.
-script: tools/run-tests.py $OPTS
+script: travis_wait 60 tools/run-tests.py $OPTS
 
 # All the job definitions in the matrix.
 matrix:
